# MobileNetV2-SSD

./: .gitignore  01_backbone.ipynb  IMPLEMENTATION_ROADMAP.md  LICENSE  Makefile  README.md  model.py  pyproject.toml  tests.py
configs/data/: voc.yaml
configs/experiments/: _template.yaml
notebooks/: 01_backbone.ipynb  01_backbone_implementation.ipynb  02_box_ops.ipynb  03_anchor_ops.ipynb  04_matcher_ops.ipynb  05_encode_ops.ipynb  06_loss_ops.ipynb  07_postprocess.ipynb  08_heads.ipynb  09_priors_orch.ipynb  10_targets_orch.ipynb  11_hard_neg_orch.ipynb  12_conf_loss_orch.ipynb  13_loss_orch.ipynb  14_factory_ssd.ipynb  16_postprocess_orch.ipynb  17_Schedule.ipynb  17_Scheduler.ipynb  17_metrics_manager.ipynb  18_Checkpoint_Manager.ipynb  19_EMA.ipynb  20_amp.ipynb  20_optimizer.ipynb  21_dataset_base.ipynb  22_dataset_voc.ipynb  24_dataset_collate.ipynb  25_logger.ipynb
scripts/: create_tfrecords.py  onnx_inference.py  schedule_experiments.py
src/cli/: bundle.py  inference.py  onnx_inference.py  train.py
src/datasets/: base.py  collate.py  transforms.py  voc.py
src/deploy/: __init__.py
src/infrastructure/: dynamodb_ledger.py  s3_sync.py  util.py
src/model/: model.py
src/training/: amp.py  checkpoints.py  ema.py  engine.py  metrics.py  optimizer.py  resume.py  schedule.py  scheduler.py  shutdown.py
tests/: conftest.py  test_backbone.py  test_box.py  test_encode.py  test_loss.py  test_match.py  test_postprocess.py  test_priors.py  tests.py
tests/integration/: test_dynamodb_ledger.py
tests/unit/: test_amp_tf.py  test_backbone_tf.py  (+7 more)
(+51 files in other folders)
